authetnication change last

--- a/client/src/filescss/products.css
+++ b/client/src/filescss/products.css
@@ -37,7 +37,7 @@
     background-color: cornflowerblue;
     border-radius: 5px;
     cursor: pointer;
-
+    border: none;
   }
 
   .products button:hover{
