--- a/client/src/filescss/cartcss.css
+++ b/client/src/filescss/cartcss.css
@@ -58,3 +58,22 @@
     top:30%;
 
 }
+
+
+.buttonCartToPayment{
+position: absolute;
+right: 5em;
+padding: 1em;
+background-color: lightblue;
+border: none;
+border-radius: 7px;
+font-size: 1.1em;
+font-weight: 600;
+cursor: pointer;
+box-shadow: 2px 2px cornflowerblue;
+}
+
+.buttonCartToPayment:hover{
+
+    opacity: 0.9;
+}
